# rules_python

examples/pip_install/my_example/: BUILD.bazel  WORKSPACE  main.py  test_main.py
examples/pip_install/my_example/lib/: BUILD.bazel
examples/pip_install/my_example/test/: BUILD.bazel  entrypoint_one.py  test_hello.py
